Fixed Page Length Being too Short

--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ html, body {
 }
 
 body {
-  min-height: 140%;
+  height: auto;
 
   display: flex;
   flex-direction: column;
